Squashed 'plugins/watchdog_pi/' changes from 99fe2b2..6671a11
6671a11 travis, add OSX target
a1e4af0 Unitialized value
6106114 Replace EXTRA_LIBS with PLUGINS_LIBS
60fdcd8 set visibility hidden
35e3ee8 cleanup TexFont, it's not a DECL_EXP
ce8feba replace isnan with wxIsNaN c++11 madness
dd85633 AIS alarm message typo
949912c landfall test, shortcut and return quickly if there's no data (missing GSHHS files)
f5699ce Unitialized value, Render can be call before we have a valid test result
ee4dff8 saving course alarm: add mising break
c1d347b GetOrFindMaskColour is slow, only call it if we can't shortcut test
034efd3 use PROJECT_SOURCE_DIR in Cmake
4e79fdb Merge pull request #97 from Hakansv/po
7168bc1 Translations 2018-03
c6110b4 correct nmea data failure to avoid false triggering, even on slow rpi
d50debd do not hardcode optimizations (-O2 is already added for release builds)
f8b7ede correct invalid lat/lon detection for initial anchor alarm
098f850 I like this dog better
45f292b add ci
da2b7a1 add options:
795364f formatting change
290dc43 change watchman to watchdog in messagebox title
c1d2c5c Merge branch 'master' of ssh://github.com/seandepagnier/watchdog_pi
cff67be Merge pull request #96 from nohal/master
35e9c10 Return . to version number
5d710d6 CI
3af2c42 Implement SVG icons and fix GL includes to prevent build failure on non-Linux
43c6e3a Packaging
2b7b256 Translations
11ba9ba remove unused declaration
37f8a06 simplify logic
bfb0fdb remove duplicate source
REVERT: 99fe2b2 Replace EXTRA_LIBS with PLUGINS_LIBS
REVERT: c6106c3 set visibility hidden
REVERT: 71b532f cleanup TexFont, it's not a DECL_EXP
REVERT: 84c6f5b replace isnan with wxIsNaN c++11 madness
REVERT: a99ab5d AIS alarm message typo
REVERT: 9189ffe landfall test, shortcut and return quickly if there's no data (missing GSHHS files)
REVERT: 509f93c Unitialized value, Render can be call before we have a valid test result
REVERT: e2493ed saving course alarm: add mising break
REVERT: f715d45 add CI confi

--- a/README
+++ b/README
@@ -22,3 +22,6 @@ Build as normally:
 License
 =======
 The plugin code is licensed under the terms of the GPL v3 or, at your will, later.
+
+
+Icons parts made by Freepik (http://www.freepik.com) from Flaticon (www.flaticon.com), licensed by Creative Commons BY 3.0 (http://creativecommons.org/licenses/by/3.0/)
