Squashed 'plugins/oesenc_pi/' changes from a36dad9..89239a8
89239a8 backport wxcurl stuff from O
dac4320 need c++11, update cmaklists requirement
a2e9b68 Replace EXTRA_LIBS with PLUGINS_LIBS
32a173e use a private name for WXCURL source list or it may use SRC_WXCURL list from OpenCPN tree
f0608aa set visibility hidden and clean Unix c++ parameters
38d0f97 cleanup TexFont, it's not a DECL_EXP
88bc6d6 viewport don't protect gtk with signal and setjmp
67e5274 memory leak
6265d8f usr equality for drval1 danger selection
9501e0f add MARCUL
374cc70 appveyor and temporary add new opencpn.lib
5c4514f appveyor and temporary add new opencpn.lib
3a0d820 add hazard , first working version
7508aab add hazard l2
77c4aec add hazards l1
97afa07 backport data quality On/Off
84cf5ee backport font list from OCPN
2b47e2a s52plib backport
cee811d oesenc LLRegion backport
96350f7 CMakelists remove private environment PATH leftover
7603ec7 typo CMakeList.txt
30ed1b0 add plugin include directory in path before main (for GL)
123293a GetOrFindMaskColour is slow, only call it if we can't shortcut test
3c49b15 remove stuff done in parent class DTOR, this stuff is not used leftover
01387f3 remove stuff done in parent class CTOR
309bb93 null obj is tested in all other paths, do it here
3355c86 small leak on error
5382763 include path for compiling plugin in opencpn source tree too
7d2d123 backport ocpn 1741d31f Change std::map key from "std::string" to "long long"
9d8c8c8 Version 2.0.0
39218d2 Version 1.7.421
ce85c2a Improve Plugin Preferences version string presentation.
adf1a2b Add full version string to Preferences dialog header.
f8d368a Language update
f469cc9 Merge branch 'ocharts' of github.com:bdbcat/oesenc_pi into ocharts
5dc8337 Merge pull request #27 from nohal/ocharts
4f35d20 Avoid explicitly specifying locales in the installer project
b604653 Allow build against a specific wxWidgets version
240d86c Version 1.7.418
15826f5 Language update
1ee06c2 Correct language definition/location fr

--- a/po/de_DE.po
+++ b/po/de_DE.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-14 22:21-0400\n"
-"PO-Revision-Date: 2018-03-20 18:24-0400\n"
+"PO-Revision-Date: 2018-04-19 21:27-0400\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: German\n"
 "Language: de_DE\n"
@@ -44,7 +44,8 @@ msgstr "Plugin für OpenCPN oeSENC Karten"
 #: src/oesenc_pi.cpp:723
 msgid "PlugIn for OpenCPN\n"
 "Provides support of oeSENC charts.\n\n"
-msgstr "oeSENC PlugIn für OpenCPN.\\nUnterstützt oeSENC Karten.\\n\\n\n\n"
+msgstr "oeSENC PlugIn für OpenCPN.\n"
+"Unterstützt oeSENC Karten.\n\n"
 
 #: src/oesenc_pi.cpp:929 src/oesenc_pi.cpp:3792
 msgid "To obtain a User Key, you must generate a unique System Identifier File.\n"
@@ -288,7 +289,7 @@ msgstr "Kann zum Herunterladen angefordert werden."
 
 #: src/ochartShop.cpp:444
 msgid "o-charts API error code: "
-msgstr "o-charts APF Fehler code: "
+msgstr "o-charts API Fehler code: "
 
 #: src/ochartShop.cpp:450
 msgid "Invalid user/email name or password."
